--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,18 +1,4 @@
-# Copyright 2021 Google LLC
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
-apiVersion: skaffold/v2beta28
+apiVersion: skaffold/v3alpha1
 kind: Config
 metadata:
   name: ghcr-actions-test
@@ -23,19 +9,18 @@ build:
       dependencies:
         paths:
         - go.mod
-        - '*.go'
-        - pkg
-      flags:
-      - -v
-      ldflags:
-      - -s
-      - -w
+        - '**/*.go'
+        ignore:
+        - '**/*_test.go'
   tagPolicy:
     inputDigest: {}
-deploy:
-  kustomize:
-    paths:
-    - manifests
+manifests:
+  rawYaml:
+  - manifests/*.yaml
+portForward:
+- resourceType: deployment
+  resourceName: hello
+  port: 8080
 profiles:
 - name: release
   patches:
@@ -44,15 +29,19 @@ profiles:
     value:
     - linux/amd64
     - linux/arm64
+#  - op: add
+#    path: /build/artifacts/0/ko/labels
+#    value:
+#      org.opencontainers.image.description: Image description max 512 characters.
+#      org.opencontainers.image.licenses: Apache-2.0
+#      org.opencontainers.image.revision: '{{.REVISION}}'
+#      org.opencontainers.image.source: '{{.SOURCE}}'
+#      org.opencontainers.image.title: ghcr-actions-test
+#      org.opencontainers.image.url: '{{.URL}}'
+#      org.opencontainers.image.vendor: Company LLC
+#      org.opencontainers.image.version: '{{.VERSION}}'
   - op: add
-    path: /build/artifacts/0/ko/labels
+    path: /build/artifacts/0/ko/ldflags
     value:
-      org.opencontainers.image.description: >-
-        Image description max 512 characters.
-      org.opencontainers.image.licenses: Apache-2.0
-      org.opencontainers.image.revision: '{{.REVISION}}'
-      org.opencontainers.image.source: '{{.SOURCE}}'
-      org.opencontainers.image.title: ghcr-actions-test
-      org.opencontainers.image.url: '{{.URL}}'
-      org.opencontainers.image.vendor: Company LLC
-      org.opencontainers.image.version: '{{.VERSION}}'
+    - -s
+    - -w
