--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,10 +79,10 @@ jobs:
       run: |
         go test -v -count=1 -short -timeout=3m -vet=asmdecl,assign,atomic,bools,buildtag,cgocall,composites,copylocks,errorsas,httpresponse,loopclosure,lostcancel,nilfunc,printf,shift,stdmethods,structtag,tests,unmarshal,unreachable,unsafeptr,unusedresult ./...
 
-    - name: Install crane
+    - name: Install krane
       run: |
         mkdir -p $HOME/.local/bin
-        curl -sSL "https://github.com/google/go-containerregistry/releases/download/${GGCR_VERSION}/go-containerregistry_$(uname -s)_$(uname -m).tar.gz" | tar -xzC $HOME/.local/bin crane
+        curl -sSL "https://github.com/google/go-containerregistry/releases/download/${GGCR_VERSION}/go-containerregistry_$(uname -s)_$(uname -m).tar.gz" | tar -xzC $HOME/.local/bin krane
 
     - name: Install Skaffold
       run: |
@@ -142,7 +142,7 @@ jobs:
         echo $(jq -r '.builds[] | select(.imageName=="ghcr-actions-test") | .tag' ${{ runner.temp }}/skaffold-artifacts.json) >> $GITHUB_ENV
 
     - name: Update latest tag
-      run: crane tag $IMAGE_NAME latest
+      run: krane tag $IMAGE_NAME latest
       env:
         GITHUB_TOKEN: ${{ github.token }}
 
