--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,10 +79,10 @@ jobs:
       run: |
         go test -v -count=1 -short -timeout=3m -vet=asmdecl,assign,atomic,bools,buildtag,cgocall,composites,copylocks,errorsas,httpresponse,loopclosure,lostcancel,nilfunc,printf,shift,stdmethods,structtag,tests,unmarshal,unreachable,unsafeptr,unusedresult ./...
 
-    - name: Install krane
-      run: |
-        mkdir -p $HOME/.local/bin
-        curl -sSL "https://github.com/google/go-containerregistry/releases/download/${GGCR_VERSION}/go-containerregistry_$(uname -s)_$(uname -m).tar.gz" | tar -xzC $HOME/.local/bin krane
+#    - name: Install krane
+#      run: |
+#        mkdir -p $HOME/.local/bin
+#        curl -sSL "https://github.com/google/go-containerregistry/releases/download/${GGCR_VERSION}/go-containerregistry_$(uname -s)_$(uname -m).tar.gz" | tar -xzC $HOME/.local/bin krane
 
     - name: Install Skaffold
       run: |
@@ -145,6 +145,7 @@ jobs:
       run: krane tag $IMAGE_NAME latest
       env:
         GITHUB_TOKEN: ${{ github.token }}
+      image: gcr.io/go-containerregistry/krane:${{ env.GGCR_VERSION }}
 
     - name: Install Cosign
       uses: sigstore/cosign-installer@main
