--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -145,7 +145,7 @@ jobs:
       run: krane tag $IMAGE_NAME latest
       env:
         GITHUB_TOKEN: ${{ github.token }}
-      image: gcr.io/go-containerregistry/krane:${{ env.GGCR_VERSION }}
+      uses: docker://gcr.io/go-containerregistry/krane:${{ env.GGCR_VERSION }}
 
     - name: Install Cosign
       uses: sigstore/cosign-installer@main
