--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -155,6 +155,7 @@ jobs:
       run: cosign sign --force --recursive --upload $IMAGE_NAME
       env:
         COSIGN_EXPERIMENTAL: 1
+        GITHUB_TOKEN: ${{ github.token }}
 
     - name: Create checksums file
       run: shasum -a 256 ghcr-actions-test_* > SHA256SUMS
