cosign needs to use k8s keychain to pick up github token from envvar

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -152,10 +152,10 @@ jobs:
         cosign-release: ${{ env.COSIGN_VERSION }}
 
     - name: Sign the images with GitHub OIDC Token
-      run: cosign sign --force --recursive --upload $IMAGE_NAME
+      run: cosign sign --force --k8s-keychain --recursive --upload $IMAGE_NAME
       env:
         COSIGN_EXPERIMENTAL: 1
-        COSIGN_PASSWORD: ${{ github.token }}
+        GITHUB_TOKEN: ${{ github.token }}
 
     - name: Create checksums file
       run: shasum -a 256 ghcr-actions-test_* > SHA256SUMS
