--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -178,7 +178,7 @@ jobs:
           --filename deployment.yaml \
           --local \
           --output yaml \
-          --patch '{"spec":{"template":{"spec":{"containers":[{"name":"hello","image":"${{ env.IMAGE_NAME }}"}]}}}}" \
+          --patch '{"spec":{"template":{"spec":{"containers":[{"name":"hello","image":"${{ env.IMAGE_NAME }}"}]}}}}' \
           > $tmpfile
         mv $tmpfile deployment.yaml
       working-directory: manifests
