Upgrade to Skaffold v2.0.0

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
       CGO_ENABLED: '0'
       COSIGN_VERSION: v1.13.1
       GGCR_VERSION: v0.12.0
-      SKAFFOLD_VERSION: v2.0.0-beta3
+      SKAFFOLD_VERSION: v2.0.0
       SKAFFOLD_CACHE_ARTIFACTS: 'false'
       SKAFFOLD_DETECT_MINIKUBE: 'false'
       SKAFFOLD_INTERACTIVE: 'false'
